--- a/languages/settings.json
+++ b/languages/settings.json
@@ -1,23 +1,28 @@
 {
-  "languages": [
+    "languages":[
     {
-      "name": "zh-CN",
-      "title": "简体中文",
-      "nativeTitle": "简体中文",
-      "active": true,
-      "default": true
+        "name": "zh-CN",
+        "title": "简体中文",
+        "nativeTitle": "简体中文",
+        "active": true,
+        "default": true
     },
     {
-      "name": "en-US",
-      "title": "英语(美国)",
-      "nativeTitle": "English (United States)"
+        "name": "en-US",
+        "title": "英语(美国)",
+        "nativeTitle": "English (United States)"
     },
     {
-      "name": "ko-KR",
-      "title": "韩语",
-      "nativeTitle": "한국어 (대한민국)"
+        "name": "ja-JP",
+        "title": "日语",
+        "nativeTitle": "日本語 (日本)"
+    },
+    {
+        "name": "ko-KR",
+        "title": "韩语",
+        "nativeTitle": "한국어 (대한민국)"
     }
-  ],
-  "library": false,
-  "debug": false
+],
+    "library":false,
+    "debug":false
 }
